src/objects/QPMS__General_comments__c.object
<CustomObject>
    <description>General comments</description>
    <fields>
        <fullName>QPMS__Basic_UDI_DI__c</fullName>
        <description>Basic UDI-DI</description>
        <inlineHelpText>Basic UDI-DI</inlineHelpText>
        <label>Basic UDI-DI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <description>Complaint Id</description>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Date__c</fullName>
        <description>Date</description>
        <inlineHelpText>Date</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <description>Follow Up Number</description>
        <formula>TEXT( QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c )</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Medical_device_name__c</fullName>
        <description>Medical device name</description>
        <inlineHelpText>Medical device name</inlineHelpText>
        <label>Medical device name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <description>Regulatory Body</description>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds the regulatory report value</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>General comments</relationshipLabel>
        <relationshipName>General_comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__UDI_device_identifier__c</fullName>
        <description>UDI device identifier</description>
        <inlineHelpText>UDI device identifier</inlineHelpText>
        <label>UDI device identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__UDI_production_identifier__c</fullName>
        <description>UDI production identifier</description>
        <inlineHelpText>UDI production identifier</inlineHelpText>
        <label>UDI production identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>General comments</label>
    <nameField>
        <label>General comments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>